add kotlin to the project